<resources>
    <string name="app_name">CalculateApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="eq">=</string>
    <string name="toSciMode">&lt;</string>
    <string name="toNumMode">&gt;</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>
    <string name="division">/</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="pow">^</string>
    <string name="pi">&#960;</string>
    <string name="exp">e</string>
    <string name="fact">!</string>
    <string name="opened">(</string>
    <string name="closed">)</string>
    <string name="sqrt">&#8730;</string>
    <string name="dot">.</string>
    <string name="del">DEL</string>
</resources>
